--- a/common-platform-reference-master-data-web/pom.xml
+++ b/common-platform-reference-master-data-web/pom.xml
@@ -35,6 +35,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- Spring Cloud Config -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
         <!-- Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
