--- a/common-platform-reference-master-data-web/src/main/resources/application.yaml
+++ b/common-platform-reference-master-data-web/src/main/resources/application.yaml
@@ -6,127 +6,5 @@ spring:
     team:
       name: Firefly Software Solutions Inc
       email: dev@getfirefly.io
-
-  r2dbc:
-    pool:
-      initial-size: 5
-      max-size: 10
-      max-idle-time: 30m
-      validation-query: SELECT 1
-    url: r2dbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?sslMode=${DB_SSL_MODE}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-
-  flyway:
-    enabled: true
-    baseline-on-migrate: true
-    locations: classpath:db/migration
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?sslMode=${DB_SSL_MODE}
-    user: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-
-  threads:
-    virtual:
-      enabled: true
-
-server:
-  address: ${SERVER_ADDRESS:localhost}
-  port: ${SERVER_PORT:8080}
-  shutdown: graceful
-
-springdoc:
-  api-docs:
-    enabled: true
-    path: /v3/api-docs
-  swagger-ui:
-    path: /swagger-ui.html
-    tagsSorter: alpha
-    operationsSorter: method
-    docExpansion: none
-    filter: true
-  packages-to-scan: com.firefly.masters.web.controllers
-  paths-to-match: /api/**
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info,prometheus
-  endpoint:
-    health:
-      show-details: always
-      probes:
-        enabled: true
-  health:
-    livenessState:
-      enabled: true
-    readinessState:
-      enabled: true
-
-logging:
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
-
----
-spring:
   config:
-    activate:
-      on-profile: dev
-
-server:
-  address: ${SERVER_ADDRESS:localhost}
-  port: ${SERVER_PORT:8080}
-  shutdown: graceful
-
-logging:
-  level:
-    root: INFO
-    com.firefly: DEBUG
-    org.springframework.r2dbc: DEBUG
-    org.flywaydb: DEBUG
-
----
-spring:
-  config:
-    activate:
-      on-profile: testing
-
-server:
-  address: ${SERVER_ADDRESS:localhost}
-  port: ${SERVER_PORT:8080}
-  shutdown: graceful
-
-logging:
-  level:
-    root: INFO
-    com.firefly: DEBUG
-    org.springframework.r2dbc: INFO
-
-springdoc:
-  api-docs:
-    enabled: true
-  swagger-ui:
-    enabled: true
-
----
-spring:
-  config:
-    activate:
-      on-profile: prod
-
-server:
-  address: ${SERVER_ADDRESS:localhost}
-  port: ${SERVER_PORT:8080}
-  shutdown: graceful
-
-logging:
-  level:
-    root: WARN
-    com.firefly: INFO
-    org.springframework: WARN
-
-springdoc:
-  api-docs:
-    enabled: false
-  swagger-ui:
-    enabled: false
+    import: "optional:configserver:${CONFIG_SERVER_URL:https://app-firefly-config-server.dev.soon.es/}"
